    one atomic proposition is used (otherwise, the atomic proposition
    and its negation is already a basis).  This can help reduce the
    size of large HOA files.

  - autfilt learned --separate-edges, to split the labels of
    the automaton using a basis of disjoint labels.  See
    https://spot.lre.epita.fr/tut25.html for some motivation.

  - ltlfilt has a new option --relabel-overlapping-bool=abc|pnn that
    will replace boolean subformulas by fresh atomic propositions even
    if those subformulas share atomic propositions.

  - ltlsynt's --ins and --outs options will iterpret any atomic
    proposition surrounded by '/' as a regular expression.
    For intance with

      ltlsynt --ins='/^in/,/env/' --outs=/^out/,/control/' ...

    any atomic proposition that starts with 'in' or contains 'env'
    will be considered as inputs, and those that start with 'out'
    or contain 'control' will be considered output.

    By default, if neither --ins nor --outs is given, ltlsynt will
    behave as if --ins='/^[iI]/' and --outs='/^[oO]/ were used.

  - ltlsynt will now check for atomic propositions that always have
    the same polarity in the specification.  When this happens, these
    output APs are replaced by true or false before running the
    synthesis pipeline, and the resulting game, Mealy machine, or
    Aiger circuit is eventually patched to include that constant
    output.  This can be disabled with --polarity=no.

  - ltlsynt will now check for atomic propositions that are specified
    as equivalent.  When this is detected, equivalent atomic
    propositions are replaced by one representative of their class, to
    limit the number of different APs processed by the synthesis
    pipeline.  The resulting game, Mealy machine, or Aiger circuit is
    eventually patched to include the removed APs.  This optimization
    can be disabled with --global-equivalence=no.  As an exception, an